Revert "fix(webui): Eval results table horizontal scrolling (#4826)"
This reverts commit 885803d11842b63c9454704492725e24010c711c.

--- a/src/app/src/pages/eval/components/ResultsTable.css
+++ b/src/app/src/pages/eval/components/ResultsTable.css
@@ -6,15 +6,11 @@ pre {
   font-weight: bold;
 }
 
-.results-table-container {
-  overflow: scroll;
-  margin: 1rem -1rem 0 -1rem;
-  padding: 0 1rem;
-}
-
 table.results-table,
 .divTable {
-  min-width: 100%;
+  border-collapse: collapse;
+  width: 100%;
+  margin: 1rem 0;
   background-color: #fff;
 }
 
@@ -106,7 +102,8 @@ table.results-table,
 
 @-moz-document url-prefix() {
   /* Firefox fix */
-  .results-table td {
+  .results-table td,
+  .results-table th {
     height: 100%;
   }
 }
@@ -206,6 +203,7 @@ table.results-table,
 /* Table-within-a-cell, used for markdown tables */
 .results-table tr .cell table {
   width: 100%;
+  border-collapse: collapse;
   margin: 1rem 0;
 }
 
@@ -408,6 +406,10 @@ table.results-table,
   border-left: 2px solid #888;
 }
 
+.results-table td.first-prompt-row {
+  border-top: 2px solid #888;
+}
+
 .search-highlight {
   color: var(--search-text-color);
   background-color: var(--search-highlight-color);
@@ -523,6 +525,7 @@ thead.collapsed .header-dismiss {
 
 /* Add these additional styles */
 .results-table {
+  border-collapse: separate;
   border-spacing: 0;
 }
 
